--- a/package.json
+++ b/package.json
@@ -8,20 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.3.1",
+    "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "styled-components": "^5.1.3",
-    "tinacms": "^0.69.16"
+    "tinacms": "1.5.6",
+    "styled-components": "^6.0.1"
   },
   "devDependencies": {
-    "@tinacms/cli": "^0.61.22",
+    "@tinacms/cli": "1.5.13",
     "eslint": "7",
-    "eslint-config-next": "^12.3.1",
-    "sass": "^1.55.0"
-  },
-  "resolutions": {
-    "@headlessui/react": "1.4.1"
+    "eslint-config-next": "12.0.3",
+    "sass": "^1.63.6"
   }
 }
