--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flickity": "2.3.0",
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tinacms": "1.5.6",
-    "styled-components": "^6.0.1"
+    "react-flickity-component": "^4.0.6",
+    "styled-components": "^6.0.1",
+    "tinacms": "1.5.6"
   },
   "devDependencies": {
     "@tinacms/cli": "1.5.13",
