--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-flickity-component": "^4.0.6",
     "styled-components": "^6.0.1",
     "tinacms": "1.5.6"
   },
   "devDependencies": {
     "@tinacms/cli": "1.5.13",
+    "@types/flickity": "^2.2.7",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "sass": "^1.63.6"
